--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-dropdown": "^1.11.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "styled-components": "^5.3.10"
   },
   "scripts": {
     "start": "react-scripts start",
